* GL account search now will search within descriptions for matches (Chris T)
* Printing without an invoice number now errors instead of increments (Chris T)
* Fixed internal server error using cash/payment (Chris T)
* Fixed #1133 (FX rate changed after selecting part/service) (Pongracz I)
* Fixed #1078 (Don't populate all empty projects automatically) (Pongracz I)

Chris T is Chris Travers
Pongracz I is Pongracz Istvan

Changelog for 1.3.39
* Fixed Internal Server Error clicking through ar/ap report (Chris T, 1022)
* Fixed internal server error deleting part (Chris T, 1027)
* Fixed Internal server error saving part with all vendor rows (Chris T, 1028)
* Fixed display of weight on parts list with comma decimal sep (Chris T, 1030)
* Fixed pricelist pdf column widths all equal (Chris T, 1037)
* Added support for zero-downtime upgrades (Chris T)
* Fixed clicking through COA does not show future transactions (Chris T, 1044)
* Fixed unable to partially pay or receive when negative due (Chris T, 1045)
* Fixed encoding for templates when edited through web (Chris T, 1077)
* Fixed customer/vendor dropdown resetting on update (Chris T, 1072)

Chris T is Chris Travers
Robert C is Robert Clay

Changelog for 1.3.38
* Fixed AR/AP transactions resetting currency/exchange rate (Chris T)
* Fixed adding vouchers not checking for locked/approved batches (Chris T 1025)
* Fixed can't delete pricematrix entries from customer screen (Chris T, 893)
* Fixed language change on order to invoice conversion (Chris T, 896)
* Fixed ar/ap tax check inconsistency (Chris T, 919)
* Fixed inputs ignored for email addresses sending statements (Chris T, 920)
* Fixed negative overpayments showing as positive (Chris T, 926)
* Fixed permission denied errors after upgrading copied db (Chris T, 956)
* Fixed "access denied" when deleting unused tax account (Chris T, 967)
* Fixed GL Report fails before entering transactions (Chris T, 977)
* Fixed start and end dates not shown on contact screen (Chris T, 979)