@@ -2540,11 +2540,15 @@ sub lastname_used {
     $vc ||= $self->{vc};    # add default to correct for improper passing
     my $arap;
     my $where;
+    my $eclass;   # we have to use a criteria to find only vendors or customers
+                  # otherwise we can get vendor by default in sales order on creating a new sales order -- PI
     if ($vc eq 'customer') {
         $arap = 'ar';
+        $eclass = 2;
     } else {
         $arap = 'ap';
         $vc = 'vendor';
+        $eclass = 1;
     }
     my $sth;
 
@@ -2568,7 +2572,8 @@ sub lastname_used {
 			ct.curr AS currency
 		FROM entity_credit_account ct
 		JOIN entity ON (ct.entity_id = entity.id)
-		WHERE entity.id = (select entity_id from $arap 
+		WHERE entity.entity_class = $eclass AND
+                      entity.id = (select entity_id from $arap 
 		                    where entity_id IS NOT NULL $where 
                                  order by id DESC limit 1)|;
 
