@@ -114,6 +114,7 @@ Changelog for 1.3.40
 * Fixed internal server error using cash/payment (Chris T)
 * Fixed #1133 (FX rate changed after selecting part/service) (Pongracz I)
 * Fixed #1078 (Don't populate all empty projects automatically) (Pongracz I)
+* Fixed #1139 (Vendor can show up as default customer in sales order, confusing...) (Pongracz I)
 
 Chris T is Chris Travers
 Pongracz I is Pongracz Istvan
